[package]
name = "rust-gossip-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.41.0", features = ["tcp-tokio", "mdns"] }
rand = "0.8"
async-std = "1.10"
futures = "0.3.31"
serde_json = "1.0.132"
serde = { version = "1", features = ["derive"] }